// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitter 1 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  share on Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 2 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    name="Twitter"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 3 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    small={true}
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          small={true}
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 4 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    circle={true}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  share on Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 5 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    name="Twitter"
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 6 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    small={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          small={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 7 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    solid={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                  />
                </svg>
                 
                <span>
                  share on Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 8 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    name="Twitter"
    solid={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 9 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    small={true}
    solid={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&url=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          small={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 11 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
}

<Component
  circle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://twitter.com/intent/tweet/?text=.&url="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=.&url="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=.&url="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 11 2`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=.&url="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=.&url="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=.&url="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 12 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c1 {
  border-radius: 5px;
  -webkit-transition: 25ms ease-out;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #55acee;
  border-color: #55acee;
}

.c1:hover,
.c1:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.c2 {
  stroke: #fff;
  fill: none;
  fill: #fff;
  stroke: none;
}

<Component>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=.&url="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=.&url="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=.&url="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="c2"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                  />
                </svg>
                 
                <span>
                  Twitter
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 13 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c0 svg {
  stroke: #232323;
  fill: none;
}

<Component
  simple={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=.&url="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    simple={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=.&url="
      rel="noreferrer noopener"
      simple={true}
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=.&url="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <TwitterIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
            />
          </svg>
        </TwitterIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Twitter 14 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  margin: 0.5em;
  display: inline-block;
}

.c0 svg {
  width: 1em;
  height: 1em;
  vertical-align: top;
}

.c0 svg:not(:only-child) {
  margin-right: 0.4em;
}

.c0 svg {
  stroke: #fff;
  fill: none;
}

<Component
  simpleReverse={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://twitter.com/intent/tweet/?text=.&url="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Twitter"
    simpleReverse={true}
  >
    <styled.a
      aria-label="Share on Twitter"
      href="https://twitter.com/intent/tweet/?text=.&url="
      rel="noreferrer noopener"
      simpleReverse={true}
      target="_blank"
      title="Share on Twitter"
    >
      <a
        aria-label="Share on Twitter"
        className="c0"
        href="https://twitter.com/intent/tweet/?text=.&url="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Twitter"
      >
        <TwitterIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
            />
          </svg>
        </TwitterIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;
